--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -18,14 +18,11 @@ jobs:
                                 # (but actions/checkout@v2 can also be instructed
                                 # to fetch all git depth right from the start)
           git remote add upstream https://github.com/ACL4SSR/ACL4SSR.git
+          git remote -v
+          git status
           git fetch upstream && git reset --hard origin/master && git clean -f -d
           # Neither forget the -b opt,
           # the feature/x ref is ambiguous at this stage
           git checkout master
           git merge --no-edit upstream/master
           git push origin master
-          
-          #sync tag
-          git fetch upstream --tags
-          git push --tags
-          # etc
