--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Fetch upstream
+      - name: Add upstream
         run: |
-          git config --global user.name 'songee2020'
+          # git config --global user.name 'songee2020'
           # git config --global user.email '21kixc@gmail.com'
           # "git checkout master" is unnecessary, already here by default
           git pull --unshallow  # this option is very important, you would get
@@ -18,13 +18,18 @@ jobs:
                                 # (but actions/checkout@v2 can also be instructed
                                 # to fetch all git depth right from the start)
           git remote add upstream https://github.com/ACL4SSR/ACL4SSR.git
+      - name: Git remote
+        run: |
           git remote -v
+      - name: Git status
+        run: |
           git status
+      - name: Fetch upstream
+        run: |
           git fetch upstream
       - name: Reset origin
         run: |
-          git reset --hard origin/master
-          git clean -f -d
+          git reset --hard origin/master && git clean -f -d
       - name: Merge upstream
         run: |
           git merge --no-edit upstream/master
