--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -10,8 +10,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Add upstream
         run: |
-          # git config --global user.name 'songee2020'
-          # git config --global user.email '21kixc@gmail.com'
+          git config --global user.name 'songee2020'
+          git config --global user.email 'songee.liu@gmail.com'
           # "git checkout master" is unnecessary, already here by default
           git pull --unshallow  # this option is very important, you would get
                                 # complains about unrelated histories without it.
@@ -27,9 +27,6 @@ jobs:
       - name: Fetch upstream
         run: |
           git fetch upstream
-      - name: Reset origin
-        run: |
-          git reset --hard origin/master && git clean -f -d
       - name: Merge upstream
         run: |
           git merge --no-edit upstream/master
